--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "youtube_",
+  "name": "youtube-theater",
   "version": "1.0.0",
-  "description": "Small YouTube Additions",
+  "description": "Expands videos to fill all free space inside browser window.",
   "devDependencies": {
-    "css": "^2.2.1",
+    "css": "^2.2.3",
     "perfectionist": "^2.4.0",
-    "postcss": "^6.0.16",
+    "postcss": "^6.0.22",
     "semver": "^5.5.0",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
-    "updates": "2.1.0"
+    "stylelint": "^9.2.0",
+    "stylelint-config-standard": "^18.2.0",
+    "updates": "2.7.3"
   },
   "scripts": {
     "build": "node build/build.js",
@@ -19,12 +19,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/StylusThemes/YouTube_.git"
+    "url": "https://github.com/StylusThemes/YouTube-Theater.git"
   },
   "author": "StylusThemes",
   "license": "CC-BY-SA-4.0",
   "bugs": {
-    "url": "https://github.com/StylusThemes/YouTube_/issues"
+    "url": "https://github.com/StylusThemes/YouTube-Theater/issues"
   },
-  "homepage": "https://github.com/StylusThemes/YouTube_"
+  "homepage": "https://github.com/StylusThemes/YouTube-Theater"
 }
