Change how I build the user.css file

--- a/package.json
+++ b/package.json
@@ -7,32 +7,25 @@
   "repository": "StylusThemes/YouTube-Theater",
   "homepage": "https://github.com/StylusThemes/YouTube-Theater",
   "main": "style.user.css",
-  "engines": {
-    "node": ">=10"
+  "dependencies": {
+    "npm": "^6.9.2"
   },
   "devDependencies": {
-    "minify": "^4.1.2",
-    "eslint": "^6.0.1",
-    "eslint-config-silverwind": "^4.0.2",
-    "fs-extra": "^8.1.0",
-    "perfectionist": "^2.4.0",
-    "semver": "^6.1.2",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0",
+    "eslint": "^5.16.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-beautify": "^3.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-file-insert": "^2.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "node-sass": "^4.12.0",
+    "sass-lint": "^1.13.1",
+    "standard": "^12.0.1",
     "updates": "^8.2.0"
   },
   "scripts": {
-    "authors": "bash tools/authors",
-    "clean": "npm run perfectionist && node tools/fix-perfectionist.js",
-    "eslint": "eslint --quiet --color tools/*.js",
-    "lint": "npm run eslint && npm run stylelint",
-    "major": "node tools/bump-version.js major && git add . && npm version -f major",
-    "minor": "node tools/bump-version.js minor && git add . && npm version -f minor",
-    "patch": "node tools/bump-version.js patch && git add . && npm version -f patch",
-    "perfectionist": "perfectionist style.user.css style.user.css --indentSize 2 --maxAtRuleLength 250",
-    "stylelint": "stylelint --silent --color -- style.user.css",
-    "test": "npm run eslint && npm run stylelint",
     "update": "updates -cu && npm install",
-    "usercss": "node tools/update-usercss.js"
+    "start": "gulp default"
   }
 }
