--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/StylusThemes/YouTube-Theater",
   "main": "style.user.css",
   "dependencies": {
-    "npm": "^6.14.7"
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
@@ -24,8 +24,12 @@
     "standard": "^14.3.4",
     "updates": "^10.3.3"
   },
+  "browserslist": [
+    "> 0.2%",
+    "last 2 versions"
+  ],
   "scripts": {
-    "update": "updates -cu && npm install",
+    "update": "updates -cu && yarn install",
     "start": "gulp default"
   }
 }
