--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-theater",
   "title": "Youtube Theater",
-  "version": "1.2.6",
+  "version": "1.2.8",
   "description": "Expands videos to fill all free space inside browser window.",
   "license": "CC-BY-SA-4.0",
   "repository": "StylusThemes/YouTube-Theater",
@@ -16,10 +16,9 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-beautify": "^3.0.0",
     "gulp-clean-css": "^4.3.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-file-insert": "^2.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "node-sass": "^5.0.0",
     "sass-lint": "^1.13.1",
     "standard": "^16.0.3",
     "updates": "^12.0.2"
