--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,6 @@ updates:
 - package-ecosystem: "npm"
   directory: "/"
   schedule:
-    interval: "weekly"
-    day: "sunday"
+    interval: "monthly"
   open-pull-requests-limit: 10
   target-branch: dev
