--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -5,5 +5,6 @@
   "platformAutomerge": true,
   "prCreation": "not-pending",
   "timezone": "US/Central",
-  "updateInternalDeps": true
+  "updateInternalDeps": true,
+  "groupName": "all"
 }
