--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
   "devDependencies": {
     "css": "^3.0.0",
     "perfectionist": "^2.4.0",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.47",
     "postcss-syntax": "^0.36.2",
     "semver": "^7.6.3",
-    "stylelint": "^16.8.2",
-    "stylelint-config-standard": "^36.0.1",
     "updates": "16.4.0"
   },
   "scripts": {
     "build": "node build/build.js",
-    "stylelint": "stylelint style.css --fix && stylelint optionals.css --fix",
     "perfectionist": "perfectionist",
     "update": "updates -cu && npm install",
-    "nupdate": "updates -cu && pnpm install"
+    "nupdate": "updates -cu && bun install"
   }
 }
